working on inventory feature

--- a/docs/design/shareable-features/gepInventory/sample-gepFeatureConfig.json
+++ b/docs/design/shareable-features/gepInventory/sample-gepFeatureConfig.json
@@ -50,7 +50,11 @@
                     {
                         "type": "list",
                         "descriptors":[
-                            "key": "text"
+                            {
+                                "key": "text",
+                                "value": "text"
+                            }
+                            
                         ]
                     }
 
