--- a/.env
+++ b/.env
@@ -34,8 +34,10 @@ mongogenmanager=http://mongogenmanager
 nodegenmanager=http://nodegenmanager
 frontgenmanager=http://frontgenmanager
 angulargenmanager=http://angulargenmanager
+angulargenmanagerV12=http://angulargenmanagerV12
 seffrontendmanager=http://seffrontendmanager
 angtemplatemanager=http://angtemplatemanager
+angtemplatemanagerV12=http://angtemplatemanagerV12
 swaggergenmanager=http://swaggergenmanager
 githubmanager=http://githubmanager
 privategithubmanager=http://privategithubmanager
