--- a/generator/services/Angular-gen-ManagerV12/Dockerfile
+++ b/generator/services/Angular-gen-ManagerV12/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14.11.0-alpine
-COPY . /angular-gen-manager
-WORKDIR /angular-gen-manager
+COPY . /angular-gen-managerV12
+WORKDIR /angular-gen-managerV12
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run dev
