--- a/generator/services/Angular-Template-managerV12/Dockerfile
+++ b/generator/services/Angular-Template-managerV12/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14.11.0-alpine
-COPY . /angulartemplatemanager
-WORKDIR /angulartemplatemanager
+COPY . /angulartemplatemanagerV12
+WORKDIR /angulartemplatemanagerV12
 RUN npm install
 RUN npm install -g @angular/cli
 RUN npm i -g ts-node
