mongodb images tags changes

--- a/devops/docker-compose/docker-compose.yml
+++ b/devops/docker-compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   mongo:
-    image: geppettotest/mongo-local:sept2021
+    image: geppettotest/mongo-local:april2020
     container_name: mongodb
     restart: unless-stopped
     environment:
