--- a/generator/services/auth-gen-manager/package.json
+++ b/generator/services/auth-gen-manager/package.json
@@ -35,6 +35,7 @@
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
+    "string-template": "^1.0.0",
     "stringtemplate-js": "^0.1.1",
     "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
