--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -32,6 +32,7 @@
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
         "grapesjs": "^0.17.27",
+        "grapesjs-custom-code": "^0.1.3",
         "grapesjs-plugin-ckeditor": "^0.0.10",
         "grapesjs-preset-webpage": "^0.1.11",
         "nanoid": "^3.1.23",
