genmanager update a generator

--- a/.env
+++ b/.env
@@ -35,10 +35,12 @@ nodegenmanager=http://nodegenmanager
 frontgenmanager=http://frontgenmanager
 angulargenmanager=http://angulargenmanager
 angulargenmanagerV12=http://angulargenmanagerV12
+angulargenmanagerV13=http://angulargenmanagerV13
 seffrontendmanager=http://seffrontendmanager
 sefnodegenmanager=http://sefnodegenmanager
 angtemplatemanager=http://angtemplatemanager
 angtemplatemanagerV12=http://angtemplatemanagerV12
+angtemplatemanagerV13=http://angtemplatemanagerV13
 swaggergenmanager=http://swaggergenmanager
 githubmanager=http://githubmanager
 privategithubmanager=http://privategithubmanager
