--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -36,6 +36,7 @@
         "grapesjs-plugin-ckeditor": "^0.0.10",
         "grapesjs-plugin-forms": "^2.0.1",
         "grapesjs-preset-webpage": "^0.1.11",
+        "grapesjs-tui-image-editor": "^0.1.3",
         "nanoid": "^3.1.23",
         "nanoid-dictionary": "^4.3.0",
         "nanoid-generate": "^1.0.0",
@@ -43,6 +44,7 @@
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.0",
         "rxjs": "~6.6.0",
+        "rxjs-compat": "^6.6.7",
         "sass": "^1.39.0",
         "toastr": "^2.1.4",
         "tslib": "^2.2.0",
@@ -61,6 +63,7 @@
         "karma-coverage": "~2.0.3",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
+        "tslib": "^2.3.1",
         "typescript": "~4.3.2"
     }
 }
