--- a/generator/services/Angular-Template-managerV12/Dockerfile
+++ b/generator/services/Angular-Template-managerV12/Dockerfile
@@ -2,6 +2,6 @@ FROM node:14.15.0-alpine
 COPY . /angulartemplatemanagerV12
 WORKDIR /angulartemplatemanagerV12
 RUN npm install
-RUN npm install -g @angular/cli
+RUN npm install -g @angular/cli@12.0.3
 RUN npm i -g ts-node
 CMD npm run dev
