--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -32,11 +32,16 @@
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
         "grapesjs": "^0.16.27",
+        "grapesjs-blocks-flexbox": "^0.1.1",
         "grapesjs-custom-code": "^0.1.3",
         "grapesjs-plugin-ckeditor": "^0.0.10",
         "grapesjs-plugin-forms": "^2.0.1",
         "grapesjs-preset-webpage": "^0.1.11",
+        "grapesjs-style-bg": "^1.0.5",
+        "grapesjs-tabs": "^1.0.6",
+        "grapesjs-tooltip": "^0.1.5",
         "grapesjs-tui-image-editor": "^0.1.3",
+        "grapesjs-typed": "^1.0.5",
         "nanoid": "^3.1.23",
         "nanoid-dictionary": "^4.3.0",
         "nanoid-generate": "^1.0.0",
