--- a/application/clients/desktopV2/angular.json
+++ b/application/clients/desktopV2/angular.json
@@ -49,6 +49,8 @@
                             "node_modules/grapesjs-tui-image-editor/dist/grapesjs-tui-image-editor.min.js",
                             "node_modules/grapesjs-blocks-flexbox/dist/grapesjs-blocks-flexbox.min.js",
                             "node_modules/grapesjs-tooltip/dist/grapesjs-tooltip.min.js",
+                            "node_modules/grapesjs-lory-slider/dist/grapesjs-lory-slider.min.js",
+                            "node_modules/grapesjs-accordion/dist/grapesjs-accordion.min.js",
                             "node_modules/grapesjs-style-bg/dist/grapesjs-style-bg.min.js",
                             "node_modules/grapesjs-tabs/dist/grapesjs-tabs.min.js",
                             "node_modules/grapesjs-typed/dist/grapesjs-typed.min.js",
