--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -32,9 +32,12 @@
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
         "grapesjs": "^0.16.27",
+        "grapesjs-accordion": "^1.0.10",
         "grapesjs-blocks-flexbox": "^0.1.1",
         "grapesjs-custom-code": "^0.1.3",
+        "grapesjs-lory-slider": "^0.1.5",
         "grapesjs-plugin-ckeditor": "^0.0.10",
+        "grapesjs-plugin-filestack": "^0.1.1",
         "grapesjs-plugin-forms": "^2.0.1",
         "grapesjs-preset-webpage": "^0.1.11",
         "grapesjs-style-bg": "^1.0.5",
