--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -48,6 +48,7 @@
         "nanoid": "^3.1.23",
         "nanoid-dictionary": "^4.3.0",
         "nanoid-generate": "^1.0.0",
+        "ng-multiselect-dropdown": "^0.3.7",
         "ngx-logger": "^4.3.3",
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.0",
