--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -29,6 +29,7 @@
         "@ngx-translate/http-loader": "^6.0.0",
         "ag-grid-angular": "^26.2.0",
         "ag-grid-community": "^26.2.0",
+        "angular-i18next": "^10.3.0",
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
         "grapesjs": "^0.17.29",
