--- a/docs/design/shareable-features/gepItemTagsManager/gepFeatureConfig.json
+++ b/docs/design/shareable-features/gepItemTagsManager/gepFeatureConfig.json
@@ -2,10 +2,10 @@
     "feature-name": "gepItemTagsManager",
     "sharing-visibility-status": "admin",
     "type": "external-QUESTION: what are other types?",
-    "last-modified-date": "10-16-2021",
-    "description": "\"Generic file uploads/downloads/management\"",
+    "last-modified-date": "01-20-2022",
+    "description": "Generic component to manage tags for any entity",
     "author-email": "gepinfo@gmail.com",
-    "author-name": "Kishan Ravindra",
+    "author-name": "Harish Sundhar",
     "organization": "com.geppettosoftware.0001",
     "icon-location": "/xx/ff/ggg/file-manager.png",
     "repo":{
