update a EFK and solve package also dist file

--- a/application/clients/desktopV2/angular.json
+++ b/application/clients/desktopV2/angular.json
@@ -35,6 +35,8 @@
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "./node_modules/grapesjs/dist/css/grapes.min.css",
                             "node_modules/ag-grid-community/dist/styles/ag-grid.css",
+                            "node_modules/ag-grid-community/dist/styles/ag-theme-alpine.css",
+                            "node_modules/ag-grid-community/dist/styles/ag-theme-alpine-dark.css",
                             "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
                             "node_modules/ag-grid-community/dist/styles/ag-theme-balham-dark.css",
                             "node_modules/ag-grid-community/dist/styles/ag-theme-blue.css",
@@ -110,7 +112,7 @@
                             "namedChunks": true
                         }
                     },
-                    "defaultConfiguration": "production"
+                    "defaultConfiguration": "development"
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
