--- a/docs/design/shareable-features/sample-gepFeatureConfig.json
+++ b/docs/design/shareable-features/sample-gepFeatureConfig.json
@@ -1,5 +1,6 @@
 {
     "feature-name": "gepFileManager",
+    "version": 1,
     "sharing-visibility-status": "admin",
     "type": "external-QUESTION: what are other types?",
     "last-modified-date": "10-16-2021",
