added the apigateway and shared feature from the db data then list of view

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ microflowmanager=http://microflowmanager
 menubuildermanager=http://menubuildermanager
 templatemanager=http://templatemanager
 securitymanager=http://securitymanager
+sharedfeaturesmanager=http://sharedfeaturesmanager
 camundasvc=http://camundasvc
 clonemanager=http://clonemanager
 authproxy=http://authproxy
