--- a/generator/services/seed/sharedfeatures/gepitemtagsmanager/gepfeatureconfig.json
+++ b/generator/services/seed/sharedfeatures/gepitemtagsmanager/gepfeatureconfig.json
@@ -1,6 +1,6 @@
 {
 
-    "feature_name": "itemtagsmanager",
+    "feature_name": "gepitemtagsmanager",
     "sharing_visibility_status": "admin",
     "type": "",
     "last_modified_date": "",
