--- a/application/services/sharedfeaturesmanager/package.json
+++ b/application/services/sharedfeaturesmanager/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "private": "true",
     "description": "sharedfeaturesmanager Node Microservice",
+    "preferGlobal": true,
     "main": "dist/server.js",
+    "bin": "src/commandsservices/commands",
     "scripts": {
         "test": "ng test",
         "build": "tsc",
@@ -16,6 +18,8 @@
     "dependencies": {
         "@types/express": "^4.16.1",
         "ts-node": "^9.0.0",
+        "commander": "^2.11.0",
+        "inquirer": "^4.0.0",
         "body-parser": "^1.18.3",
         "btoa-atob": "^0.1.2",
         "btoa": "^1.2.1",
