images issues with large size and vault creds get into gepfilemanager upload s3 buckets grapesjs-images

--- a/devops/docker-compose/docker-compose.yml
+++ b/devops/docker-compose/docker-compose.yml
@@ -206,6 +206,7 @@ services:
     env_file: ../../.env
     depends_on:
       - mongo
+      - vault
 
   deletemanager:
     build: ../../application/services/deletetmanager
