--- a/application/services/gepfilemanager/package.json
+++ b/application/services/gepfilemanager/package.json
@@ -18,14 +18,16 @@
         "aws-sdk": "^2.776.0",
         "body-parser": "^1.18.3",
         "busboy": "^0.3.1",
+        "busboy-body-parser": "^0.3.2",
+        "connect-busboy": "^1.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.16.4",
         "express-winston": "^3.0.1",
         "fs": "0.0.1-security",
+        "mongoose": "~5.4.7",
         "node-async-loop": "^1.2.2",
         "node-vault": "^0.9.5",
-        "mongoose": "~5.4.7",
         "nodemon": "^1.18.9",
         "ts-node": "^9.0.0",
         "typescript": "^3.3.1",
