--- a/docs/design/shareable-features/gepItemTagsManager/gepFeatureConfig.json
+++ b/docs/design/shareable-features/gepItemTagsManager/gepFeatureConfig.json
@@ -117,7 +117,10 @@
 
     ],
 
-    "configuration": {
+    "runtime-configuration":{
+
+    },
+    "admin-runtime-configuration": {
         "admin-ui-entry-point": "/xxx/yyy/zzz",
         "admin-backend-services": [
             {
