update shared feature and check with command

--- a/application/services/sharedfeaturesmanager/package.json
+++ b/application/services/sharedfeaturesmanager/package.json
@@ -17,23 +17,24 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.16.1",
-        "ts-node": "^9.0.0",
-        "commander": "^2.11.0",
-        "inquirer": "^4.0.0",
+        "@types/node": "^17.0.21",
         "body-parser": "^1.18.3",
-        "btoa-atob": "^0.1.2",
         "btoa": "^1.2.1",
+        "btoa-atob": "^0.1.2",
+        "commander": "^9.0.0",
         "cors": "^2.8.5",
         "express": "^4.16.4",
         "express-winston": "^3.0.1",
+        "inquirer": "^4.0.0",
+        "jsonwebtoken": "8.5.1",
         "mongoose": "^5.4.9",
+        "node-fetch": "^2.3.0",
         "node-vault": "^0.9.5",
         "nodemon": "^1.18.9",
+        "ts-node": "^9.0.0",
         "typescript": "^3.3.1",
         "util": "^0.11.1",
         "winston": "^3.2.1",
-        "node-fetch": "^2.3.0",
-        "jsonwebtoken": "8.5.1",
         "winston-daily-rotate-file": "^3.6.0"
     }
 }
