Ui and backend feature data adding the component

--- a/generator/services/sharedfeaturesgenmanager/Dockerfile
+++ b/generator/services/sharedfeaturesgenmanager/Dockerfile
@@ -3,4 +3,4 @@ COPY . /sharedfeaturesgenmanager
 WORKDIR /sharedfeaturesgenmanager
 RUN npm install
 RUN npm i -g ts-node
-CMD npm run prod
+CMD npm run dev
