--- a/generator/services/sharedfeaturesgenmanager/package.json
+++ b/generator/services/sharedfeaturesgenmanager/package.json
@@ -14,23 +14,24 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.16.1",
-        "ts-node": "^9.0.0",
         "body-parser": "^1.18.3",
-        "btoa-atob": "^0.1.2",
         "btoa": "^1.2.1",
+        "btoa-atob": "^0.1.2",
         "cors": "^2.8.5",
         "express": "^4.16.4",
-        "ncp": "^2.0.0",
         "express-winston": "^3.0.1",
+        "fs-extra": "^10.0.1",
+        "jsonwebtoken": "8.5.1",
         "mongoose": "^5.4.9",
-        "node-vault": "^0.9.5",
+        "ncp": "^2.0.0",
         "node-async-loop": "^1.2.2",
+        "node-fetch": "^2.3.0",
+        "node-vault": "^0.9.5",
         "nodemon": "^1.18.9",
+        "ts-node": "^9.0.0",
         "typescript": "^3.3.1",
         "util": "^0.11.1",
         "winston": "^3.2.1",
-        "node-fetch": "^2.3.0",
-        "jsonwebtoken": "8.5.1",
         "winston-daily-rotate-file": "^3.6.0"
     }
 }
